// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackButton /> Should render a BackButton component 1`] = `
<div>
  <button
    class="guided-answer__header__navButtons"
    id="back-button"
    title="Step back"
  >
    <i
      aria-hidden="true"
      class="ts-icon root-105"
      data-icon-name="GoLeft"
    />
    <span
      class="guided-answer__header__navButtons__text"
    >
      Step back
    </span>
  </button>
</div>
`;

exports[`<HomeButton /> Should render a HomeButton component 1`] = `
<div>
  <button
    class="guided-answer__header__navButtons"
    id="home-button"
    title="Home"
  >
    <i
      aria-hidden="true"
      class="ts-icon root-105"
      data-icon-name="Home"
    />
    <span
      class="guided-answer__header__navButtons__text"
    >
      Home
    </span>
  </button>
</div>
`;

exports[`<RestartButton /> Should render a RestartButton component 1`] = `
<div>
  <button
    class="guided-answer__header__navButtons"
    id="restart-button"
    title="Restart"
  >
    <i
      aria-hidden="true"
      class="ts-icon root-105"
      data-icon-name="Refresh"
    />
    <span
      class="guided-answer__header__navButtons__text"
    >
      Restart
    </span>
  </button>
</div>
`;

exports[`<ShareButton /> Should render a ShareButton component 1`] = `
<div>
  <button
    class="ms-Button ms-Button--icon is-checked guided-answer__header__navButtons root-166"
    data-is-focusable="true"
    id="callout-test-id"
    title="Share this guide"
    type="button"
  >
    <span
      class="ms-Button-flexContainer flexContainer-167"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden="true"
        class="ms-Icon root-105 ms-Button-icon icon-169"
        data-icon-name="Link"
      />
    </span>
  </button>
  <span
    class="ms-layer"
  />
</div>
`;
